--- a/playbooks/database/vars.yml
+++ b/playbooks/database/vars.yml
@@ -1,1 +1,50 @@
 ---
+firewall_allowed_tcp_ports:
+  - 22
+  - 3306
+
+# TODO: Add a rule to limit port 3306 to only the application servers.
+firewall_additional_rules: []
+
+mysql_root_password: supersecure
+mysql_users:
+  - {
+    name: drupal,
+    host: "%",
+    password: supersecure,
+    priv: "drupal.*:ALL"
+  }
+
+mysql_databases:
+  - {
+    name: drupal,
+    collation: utf8_general_ci,
+    encoding: utf8,
+    replicate: 0
+  }
+
+mysql_bind_address: "{{ ansible_default_ipv4.address }}"
+
+# TODO - Consider using external drive.
+mysql_datadir: /var/lib/mysql
+
+# Memory settings.
+mysql_key_buffer_size: "32M"
+mysql_max_allowed_packet: "64M"
+mysql_table_open_cache: "256"
+mysql_sort_buffer_size: "1M"
+mysql_read_buffer_size: "1M"
+mysql_read_rnd_buffer_size: "4M"
+mysql_myisam_sort_buffer_size: "32M"
+# mysql_myisam_sort_buffer_size: "64M" # For 1GB RAM.
+mysql_thread_cache_size: "25"
+mysql_query_cache_size: "16M"
+
+# InnoDB settings.
+mysql_innodb_file_per_table: "1"
+mysql_innodb_buffer_pool_size: "256M"
+# mysql_innodb_buffer_pool_size: "512M" # For 1GB RAM.
+mysql_innodb_additional_mem_pool_size: "20M"
+mysql_innodb_log_file_size: "64M"
+mysql_innodb_log_buffer_size: "8M"
+mysql_innodb_flush_log_at_trx_commit: "2"
