--- a/playbooks/balancer/vars.yml
+++ b/playbooks/balancer/vars.yml
@@ -1,1 +1,15 @@
 ---
+firewall_allowed_tcp_ports:
+  - 22
+  - 80
+
+nginx_worker_processes: "4" # Set to number of CPU cores on Pi.
+nginx_worker_connections: "512"
+nginx_client_max_body_size: "64m"
+nginx_keepalive_timeout: "65"
+
+# TODO: Set up vhost and proxy settings for load balancing.
+# nginx_proxy_cache_path: ""
+
+nginx_remove_default_vhost: false
+nginx_vhosts: []
