--- a/playbooks/balancer/balancer.yml
+++ b/playbooks/balancer/balancer.yml
@@ -10,4 +10,10 @@
     - geerlingguy.firewall
     - geerlingguy.nginx
 
-  tasks: []
+  tasks:
+    - name: Copy vhost configuration into place.
+      copy:
+        src: balancer.conf
+        dest: /etc/nginx/sites-enabled/balancer.conf
+        mode: 0644
+      notify: restart nginx
