Add Drupal configuration.

--- a/playbooks/balancer/balancer.conf
+++ b/playbooks/balancer/balancer.conf
@@ -1,7 +1,29 @@
+# Add $drupal_logged_in variable.
+map $http_cookie $drupal_logged_in {
+    default 0;
+    ~SESS 1;
+}
+
 server {
     listen 80;
+    access_log off; # Save a ton of precious disk I/O.
+
+    # Enable proxy cache and specify cache key.
+    proxy_cache cache;
+    set $cache_key $scheme$host$uri$is_args$args;
+
+    port_in_redirect off;
 
     location / {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $remote_addr;
         proxy_pass http://dramble;
+        add_header X-Proxy-Cache $upstream_cache_status;
+
+        # Proxy cache configuration.
+        proxy_cache_bypass $drupal_logged_in $http_cache_control;
+        proxy_no_cache $drupal_logged_in $arg_nocache$arg_page;
+        proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
     }
 }
