--- a/playbooks/database/database.yml
+++ b/playbooks/database/database.yml
@@ -9,7 +9,7 @@
   pre_tasks:
     - name: Ensure the data directory for mysql exists.
       file:
-        path: mysql_datadir
+        path: "{{ mysql_datadir }}"
         state: directory
         owner: mysql
         group: mysql
