--- a/playbooks/web/vars.yml
+++ b/playbooks/web/vars.yml
@@ -3,12 +3,25 @@ firewall_allowed_tcp_ports:
   - 22
   - 80
 
+# Nginx configuration.
 nginx_worker_processes: "4" # Set to number of CPU cores on Pi.
 nginx_worker_connections: "512"
 nginx_client_max_body_size: "64m"
 nginx_keepalive_timeout: "65"
-
-# nginx_proxy_cache_path: ""
-
-nginx_remove_default_vhost: false
+nginx_remove_default_vhost: true
 nginx_vhosts: []
+
+# PHP configuration.
+php_webserver_daemon: "nginx"
+php_packages:
+  - php5
+  - php5-fpm
+  - php5-cli
+  - php5-common
+  - php5-curl
+  - php5-dev
+  - php5-gd
+  - php5-mcrypt
+  - php-pear
+  - php-apc
+php_enable_php_fpm: true
