Get Nginx caching to work properly.

--- a/playbooks/balancer/balancer.conf
+++ b/playbooks/balancer/balancer.conf
@@ -22,7 +22,7 @@ server {
         add_header X-Proxy-Cache $upstream_cache_status;
 
         # Proxy cache configuration.
-        proxy_cache_bypass $drupal_logged_in $http_cache_control;
+        proxy_cache_bypass $drupal_logged_in; # Consider re-adding $http_cache_control (was causing BYPASS).
         proxy_no_cache $drupal_logged_in $arg_nocache$arg_page;
         proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
     }
