--- a/playbooks/drupal/main.yml
+++ b/playbooks/drupal/main.yml
@@ -28,3 +28,6 @@
   handlers:
     - name: restart nginx
       service: name=nginx state=restarted
+
+    - name: restart php-fpm
+      service: name=php-fpm state=restarted
