--- a/playbooks/vars.yml
+++ b/playbooks/vars.yml
@@ -1,6 +1,6 @@
 ---
 site_name: Dramble
-site_url: www.dramble.dev
+site_url: pidramble.com
 drupal_docroot: /var/www/drupal
 drupal_nfs_share: /var/drupal
 drupal_nfs_mount: /mnt/drupal
