Add missing requirement and clean up Drupal playbook.

--- a/playbooks/requirements.txt
+++ b/playbooks/requirements.txt
@@ -3,6 +3,7 @@ geerlingguy.nginx
 geerlingguy.mysql
 geerlingguy.php
 geerlingguy.php-mysql
+geerlingguy.composer
 geerlingguy.drush
 geerlingguy.redis
 geerlingguy.nfs
