--- a/setup/networking/vars.yml
+++ b/setup/networking/vars.yml
@@ -2,20 +2,20 @@
 # Mapping of what hardware MAC addresses should be configured with specific IPs.
 mac_address_mapping:
   "b8:27:eb:a1:14:de":
-    name: bal1.dramble
+    name: bal1.pidramble.com
     ip: "10.0.1.60"
   "b8:27:eb:52:6a:13":
-    name: www1.dramble
+    name: www1.pidramble.com
     ip: "10.0.1.61"
   "b8:27:eb:90:52:27":
-    name: www2.dramble
+    name: www2.pidramble.com
     ip: "10.0.1.62"
   "b8:27:eb:f0:49:d2":
-    name: www3.dramble
+    name: www3.pidramble.com
     ip: "10.0.1.63"
   "b8:27:eb:ea:9c:e0":
-    name: cache1.dramble
+    name: cache1.pidramble.com
     ip: "10.0.1.64"
   "b8:27:eb:54:0c:d1":
-    name: db1.dramble,
+    name: db1.pidramble.com,
     ip: "10.0.1.65"
