Fix a trailing comma.

--- a/setup/networking/vars.yml
+++ b/setup/networking/vars.yml
@@ -17,5 +17,5 @@ mac_address_mapping:
     name: cache1.pidramble.com
     ip: "10.0.1.64"
   "b8:27:eb:54:0c:d1":
-    name: db1.pidramble.com,
+    name: db1.pidramble.com
     ip: "10.0.1.65"
