Issue #23: Switch to GlusterFS for shared Drupal files directory.

--- a/playbooks/requirements.txt
+++ b/playbooks/requirements.txt
@@ -6,5 +6,5 @@ geerlingguy.php-mysql
 geerlingguy.composer
 geerlingguy.drush
 geerlingguy.redis
-geerlingguy.nfs
+geerlingguy.glusterfs
 geerlingguy.git
