--- a/playbooks/drupal/main.yml
+++ b/playbooks/drupal/main.yml
@@ -26,6 +26,7 @@
   handlers:
     - name: restart nginx
       service: name=nginx state=restarted
+      notify: restart php-fpm
 
     - name: restart php-fpm
-      service: name=php-fpm state=restarted
+      service: name=php5-fpm state=restarted
