--- a/playbooks/web/web.yml
+++ b/playbooks/web/web.yml
@@ -6,6 +6,10 @@
     - ../vars.yml
     - vars.yml
 
+  pre_tasks:
+    # Add backports so we can install a newer version of Nginx and php5-redis.
+    - include: ../wheezy-backports.yml
+
   roles:
     - geerlingguy.firewall
     - geerlingguy.nginx
