--- a/playbooks/web/vars.yml
+++ b/playbooks/web/vars.yml
@@ -16,6 +16,7 @@ firewall_allowed_udp_ports:
   - 111
 
 # Nginx configuration.
+nginx_default_release: wheezy-backports # For Nginx 1.6.x instead of 1.2.x.
 nginx_worker_processes: "4" # Set to number of CPU cores on Pi.
 nginx_worker_connections: "512"
 nginx_client_max_body_size: "64m"
