--- a/playbooks/vars.yml
+++ b/playbooks/vars.yml
@@ -5,3 +5,6 @@ drupal_docroot: /var/www/drupal
 
 # Drupal filesystem configuration.
 glusterfs_mount_dir: /mnt/gluster
+
+# Networking configuration.
+networking_default_gateway: 10.0.1.1
