--- a/playbooks/balancer/balancer.conf
+++ b/playbooks/balancer/balancer.conf
@@ -12,6 +12,14 @@ server {
     proxy_cache cache;
     set $cache_key $scheme$host$uri$is_args$args;
 
+    # Gzip saves bandwidth, but hurts on servers with slower CPU.
+    # See: https://github.com/geerlingguy/raspberry-pi-dramble/issues/26
+    # zip on;
+    # gzip_min_length 10240;
+    # gzip_proxied expired no-cache no-store private auth;
+    # gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+    # gzip_disable "MSIE [1-6]\.";
+
     port_in_redirect off;
 
     location / {
