Update PHP and APC memory limits.

--- a/playbooks/web/vars.yml
+++ b/playbooks/web/vars.yml
@@ -39,6 +39,8 @@ php_packages:
   - php-pear
   - php-apc
 php_enable_php_fpm: true
+php_memory_limit: "128M"
+php_apc_shm_size: "128M"
 
 # GlusterFS configuration.
 glusterfs_brick_dir: /srv/gluster/brick
