--- a/playbooks/balancer/balancer.conf
+++ b/playbooks/balancer/balancer.conf
@@ -14,7 +14,7 @@ server {
 
     # Gzip saves bandwidth, but hurts on servers with slower CPU.
     # See: https://github.com/geerlingguy/raspberry-pi-dramble/issues/26
-    # zip on;
+    # gzip on;
     # gzip_min_length 10240;
     # gzip_proxied expired no-cache no-store private auth;
     # gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
