--- a/playbooks/balancer/balancer.conf
+++ b/playbooks/balancer/balancer.conf
@@ -14,11 +14,12 @@ server {
 
     # Gzip saves bandwidth, but hurts on servers with slower CPU.
     # See: https://github.com/geerlingguy/raspberry-pi-dramble/issues/26
-    # gzip on;
-    # gzip_min_length 10240;
-    # gzip_proxied expired no-cache no-store private auth;
-    # gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
-    # gzip_disable "MSIE [1-6]\.";
+    gzip on;
+    gzip_min_length 1400;
+    gzip_comp_level 1;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml;
+    gzip_disable "MSIE [1-6]\.";
 
     port_in_redirect off;
 
