--- a/playbooks/vars.yml
+++ b/playbooks/vars.yml
@@ -4,7 +4,7 @@ site_url: pidramble.com
 drupal_docroot: /var/www/drupal
 
 # Drupal filesystem configuration.
-glusterfs_mount_dir: /mnt/gluster
+gluster_mount_dir: /mnt/gluster
 
 # Networking configuration.
 networking_default_gateway: 10.0.1.1
