--- a/playbooks/web/gluster.yml
+++ b/playbooks/web/gluster.yml
@@ -43,4 +43,4 @@
     src: "{{ groups.webservers[0] }}:/{{ gluster_brick_name }}"
     fstype: glusterfs
     opts: "defaults,_netdev"
-    state: present
+    state: mounted
