--- a/playbooks/drupal/install.yml
+++ b/playbooks/drupal/install.yml
@@ -8,6 +8,12 @@
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
 
+- name: Override the generated site UUID with our own.
+  command: >
+    drush config-set system.site uuid {{ drupal_site_uuid }}
+    chdir={{ drupal_docroot }}
+  when: "inventory_hostname == groups.webservers[0]"
+
 - name: Ensure settings.php has proper permissions.
   file:
     path: "{{ drupal_docroot }}/sites/default/settings.php"
