--- a/playbooks/drupal/vars.yml
+++ b/playbooks/drupal/vars.yml
@@ -3,7 +3,7 @@
 drupal_repo: https://github.com/geerlingguy/demo-drupal-8.git
 
 # The tag or branch to check out from the above git repository.
-drupal_version: "0.9.7"
+drupal_version: "0.9.8"
 
 # User 1 credentials.
 drupal_admin_name: admin
@@ -13,5 +13,22 @@ drupal_admin_password: secret
 drupal_db_name: drupal
 drupal_db_username: drupal
 drupal_db_password: supersecure
-drupal_install_profile: standard
+drupal_install_profile: minimal
 drupal_hash_salt: nCZ3_LdhMkzH7MidhZ3Ac4sUyIbQP2FS9upOUbppzT9EtWp_gUmR8KZffhwm8rjmTr08oWLhjQ
+drupal_site_uuid: 73ee435f-88fd-4b45-9c00-c09c54510359
+
+# Modules to enable and disable on update.
+drupal_modules_enabled:
+  # Core
+  - ckeditor
+  - config
+  - editor
+  - menu_link_content
+  - menu_ui
+  - path
+  - toolbar
+  - views
+  # Contrib
+  - redis
+drupal_modules_disabled:
+  - dblog
