--- a/playbooks/drupal/vars.yml
+++ b/playbooks/drupal/vars.yml
@@ -16,19 +16,4 @@ drupal_db_password: supersecure
 drupal_install_profile: minimal
 drupal_hash_salt: nCZ3_LdhMkzH7MidhZ3Ac4sUyIbQP2FS9upOUbppzT9EtWp_gUmR8KZffhwm8rjmTr08oWLhjQ
 drupal_site_uuid: 73ee435f-88fd-4b45-9c00-c09c54510359
-
-# Modules to enable and disable on update.
-drupal_modules_enabled:
-  # Core
-  - ckeditor
-  - config
-  - editor
-  - menu_link_content
-  - menu_ui
-  - path
-  - toolbar
-  - views
-  # Contrib
-  - redis
-drupal_modules_disabled:
-  - dblog
+drupal_redis_enabled: false
