--- a/playbooks/drupal/update.yml
+++ b/playbooks/drupal/update.yml
@@ -4,15 +4,18 @@
     drush updatedb -y
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
+  notify: restart redis
 
 - name: Import staging configuration.
   command: >
     drush config-import -y staging
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
+  notify: restart redis
 
 - name: Rebuild caches.
   command: >
     drush cache-rebuild --quiet
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
+  notify: restart redis
