--- a/playbooks/web/web.yml
+++ b/playbooks/web/web.yml
@@ -18,6 +18,7 @@
     - geerlingguy.drush
     - geerlingguy.git
     - geerlingguy.glusterfs
+    - geerlingguy.munin-node
 
   tasks:
     - name: Ensure dependencies are installed.
