--- a/playbooks/balancer/balancer.yml
+++ b/playbooks/balancer/balancer.yml
@@ -13,6 +13,7 @@
   roles:
     - geerlingguy.firewall
     - geerlingguy.nginx
+    - geerlingguy.munin
 
   tasks:
     - name: Copy vhost configuration into place.
