--- a/playbooks/web/vars.yml
+++ b/playbooks/web/vars.yml
@@ -19,6 +19,9 @@ firewall_allowed_tcp_ports:
 firewall_allowed_udp_ports:
   - 111
 
+firewall_additional_rules:
+  - "iptables -A INPUT -p tcp --dport 4949 -s {{ groups.balancer[0] }} -j ACCEPT"
+
 # Nginx configuration.
 nginx_default_release: wheezy-backports # For Nginx 1.6.x instead of 1.2.x.
 nginx_worker_processes: "4" # Set to number of CPU cores on Pi.
@@ -58,3 +61,8 @@ gluster_brick_config:
   {{ groups.webservers[0] }}:{{ gluster_brick_dir }}
   {{ groups.webservers[1] }}:{{ gluster_brick_dir }}
   {{ groups.webservers[2] }}:{{ gluster_brick_dir }}"
+
+# Munin settings.
+munin_node_allowed_ips:
+  # TODO: Make this dynamic.
+  - '^10\.0\.1\.60$'
