--- a/playbooks/balancer/vars.yml
+++ b/playbooks/balancer/vars.yml
@@ -24,6 +24,7 @@ nginx_upstreams:
 # Munin configuration.
 munin_admin_user: admin
 munin_admin_password: secret
+munin_cron_job: absent
 munin_hosts:
   - { name: "dramble;bal1.pidramble.com", address: "127.0.0.1", extra: [] }
   - { name: "dramble;www1.pidramble.com", address: "{{ groups.webservers[0] }}", extra: [] }
