--- a/playbooks/drupal/main.yml
+++ b/playbooks/drupal/main.yml
@@ -36,3 +36,8 @@
       delegate_to: "{{ item }}"
       with_items: groups.cache
       when: drupal_redis_enabled
+
+    - name: purge reverse proxy cache
+      shell: "rm -rf /var/cache/nginx/*"
+      delegate_to: "{{ item }}"
+      with_items: groups.balancer
