--- a/playbooks/drupal/update.yml
+++ b/playbooks/drupal/update.yml
@@ -4,18 +4,24 @@
     drush updatedb -y
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
-  notify: restart redis
+  notify:
+    - restart redis
+    - purge reverse proxy cache
 
 - name: Import staging configuration.
   command: >
     drush config-import -y staging
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
-  notify: restart redis
+  notify:
+    - restart redis
+    - purge reverse proxy cache
 
 - name: Rebuild caches.
   command: >
     drush cache-rebuild --quiet
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
-  notify: restart redis
+  notify:
+    - restart redis
+    - purge reverse proxy cache
