--- a/playbooks/web/vars.yml
+++ b/playbooks/web/vars.yml
@@ -64,5 +64,4 @@ gluster_brick_config:
 
 # Munin settings.
 munin_node_allowed_ips:
-  # TODO: Make this dynamic.
-  - '^10\.0\.1\.60$'
+  - "^{{ groups.balancer[0] | replace('.', '\\.') }}$"
