--- a/playbooks/drupal/tasks/cron.yml
+++ b/playbooks/drupal/tasks/cron.yml
@@ -3,6 +3,6 @@
   cron:
     name: "Dramble Drupal cron"
     minute: "*/15"
-    user: pi
+    user: "{{ ansible_ssh_user }}"
     job: "/usr/local/bin/drush --quiet --root=/var/www/drupal cron -y"
   when: "inventory_hostname == groups.webservers[0]"
