--- a/playbooks/drupal/tasks/install.yml
+++ b/playbooks/drupal/tasks/install.yml
@@ -8,6 +8,9 @@
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
 
+- name: Wait for Drupal to get bootstrapped.
+  pause: seconds=5
+
 - name: Override the generated site UUID with our own.
   command: >
     drush config-set -y system.site uuid {{ drupal_site_uuid }}
