--- a/playbooks/web/web.yml
+++ b/playbooks/web/web.yml
@@ -25,6 +25,7 @@
       apt: "name={{ item }} state=present"
       with_items:
         # Needed to complete Drupal installation.
+        - sendmail-bin
         - sendmail
         # So drush can connect to MySQL.
         - mysql-client
