Fixes #44: Configure LED for boot and playbook runs.

--- a/playbooks/balancer/balancer.yml
+++ b/playbooks/balancer/balancer.yml
@@ -14,6 +14,7 @@
     - geerlingguy.firewall
     - geerlingguy.nginx
     - geerlingguy.munin
+    - ../roles/leds
 
   tasks:
     - name: Copy vhost configuration into place.
