--- a/playbooks/web/web.yml
+++ b/playbooks/web/web.yml
@@ -19,6 +19,7 @@
     - geerlingguy.git
     - geerlingguy.glusterfs
     - geerlingguy.munin-node
+    - ../roles/leds
 
   tasks:
     - name: Ensure dependencies are installed.
