Only run update commands when the codebase is updated.

--- a/playbooks/drupal/main.yml
+++ b/playbooks/drupal/main.yml
@@ -24,7 +24,7 @@
       when: not drupal_install_complete.stat.exists
 
     - include: tasks/update.yml
-      when: drupal_install_complete.stat.exists
+      when: drupal_install_complete.stat.exists and project_updated.changed
 
     - include: tasks/cron.yml
 
