--- a/playbooks/drupal/tasks/deploy.yml
+++ b/playbooks/drupal/tasks/deploy.yml
@@ -19,6 +19,7 @@
     version: "{{ drupal_version }}"
     update: yes
     dest: "{{ drupal_docroot }}"
+  register: project_updated
   notify: restart nginx
   sudo_user: www-data
 
