--- a/playbooks/roles/leds/tasks/main.yml
+++ b/playbooks/roles/leds/tasks/main.yml
@@ -19,5 +19,8 @@
     state: link
   with_items: leds_scripts
 
-- name: Set up cron job to switch to green on boot.
-  cron: name="Ready for action" special_time=reboot job="/usr/bin/rgb green"
+- name: Set up cron jobs for LED control.
+  cron: 'name="{{ item.name }}" special_time=reboot job="{{ item.job }}"'
+  with_items:
+    - { name: "Switch to green on RGB LED", job: "/usr/bin/rgb green" }
+    - { name: "Configure onboard Pi LEDs", job: "/usr/bin/onboard-led-setup" }
