Fixes #41: Make entire drupal playbook capable of being run on the local network.

--- a/playbooks/balancer/balancer.yml
+++ b/playbooks/balancer/balancer.yml
@@ -17,6 +17,8 @@
     - ../roles/leds
 
   tasks:
+    - include: git-repo.yml
+
     - name: Copy vhost configuration into place.
       template:
         src: balancer.conf.j2
