--- a/playbooks/drupal/vars/main.yml
+++ b/playbooks/drupal/vars/main.yml
@@ -1,6 +1,6 @@
 ---
 # Drupal configuration.
-drupal_repo: https://github.com/geerlingguy/demo-drupal-8.git
+drupal_repo: http://git.pidramble.com/demo-drupal-8.git
 
 # The tag or branch to check out from the above git repository.
 drupal_version: "1.1.0"
