--- a/playbooks/web/web.yml
+++ b/playbooks/web/web.yml
@@ -22,27 +22,6 @@
     - ../roles/leds
 
   tasks:
-    - name: Ensure dependencies are installed.
-      apt: "name={{ item }} state=present"
-      with_items:
-        # Needed to complete Drupal installation.
-        - sendmail-bin
-        - sendmail
-        # So drush can connect to MySQL.
-        - mysql-client
-
-    - name: Copy vhost configuration into place.
-      template:
-        src: drupal.conf.j2
-        dest: /etc/nginx/sites-enabled/drupal.conf
-        mode: 0644
-      notify: restart nginx
-
-    - name: Copy php5-fpm www pool configuration into place.
-      template:
-        src: www.conf.j2
-        dest: /etc/php5/fpm/pool.d/www.conf
-        mode: 0644
-      notify: restart php-fpm
-
-    - include: gluster.yml
+    - include: tasks/extras.yml
+    - include: tasks/config.yml
+    - include: tasks/gluster.yml
