Ensure everything is in working order for the MidCamp presentation.

--- a/setup/networking/main.yml
+++ b/setup/networking/main.yml
@@ -24,6 +24,7 @@
         - { template: hostname.j2, dest: /etc/hostname }
         - { template: hosts.j2, dest: /etc/hosts }
         - { template: interfaces.j2, dest: /etc/network/interfaces }
+        - { template: resolv.conf.j2, dest: /etc/resolv.conf }
       notify: update hostname
 
   handlers:
