--- a/setup/resets/drupal.yml
+++ b/setup/resets/drupal.yml
@@ -37,7 +37,7 @@
 
   tasks:
     - name: Empty nginx reverse proxy cache.
-      command: "rm -rf /var/cache/nginx/*"
+      shell: "rm -rf /var/cache/nginx/*"
 
     - name: Restart nginx.
       service: name=nginx state=restarted
