A few minor changes for increased stability.

--- a/playbooks/drupal/tasks/install.yml
+++ b/playbooks/drupal/tasks/install.yml
@@ -7,6 +7,7 @@
     --account-pass={{ drupal_admin_password }}
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
+  sudo_user: www-data
 
 - name: Wait for Drupal to get bootstrapped.
   pause: seconds=5
@@ -17,6 +18,7 @@
     drush config-set -y system.site uuid {{ drupal_site_uuid }}
     chdir={{ drupal_docroot }}
   when: "inventory_hostname == groups.webservers[0]"
+  sudo_user: www-data
 
 - name: Ensure settings.php has proper permissions.
   file:
